add ping endpoint & external mysql
