# src/services/open-api/wwwroot/apidocs.json
@@ -148,6 +148,54 @@
         ]
       }
     },
+    "/cart/api/ping": {
+      "get": {
+        "operationId": "Ping",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          }
+        },
+        "tags": [
+          "CartService"
+        ]
+      }
+    },
+    "/catalog/api/admin-ping": {
+      "get": {
+        "operationId": "AdminPing",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          }
+        },
+        "tags": [
+          "CatalogService"
+        ]
+      }
+    },
+    "/catalog/api/ping": {
+      "get": {
+        "operationId": "Ping",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          }
+        },
+        "tags": [
+          "CatalogService"
+        ]
+      }
+    },
     "/catalog/api/products": {
       "post": {
         "operationId": "CreateProduct",
@@ -293,6 +341,38 @@
         ],
         "tags": [
           "InventoryService"
+        ]
+      }
+    },
+    "/inventory/api/ping": {
+      "get": {
+        "operationId": "Ping",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          }
+        },
+        "tags": [
+          "InventoryService"
+        ]
+      }
+    },
+    "/rating/api/ping": {
+      "get": {
+        "operationId": "Ping",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          }
+        },
+        "tags": [
+          "RatingService"
         ]
       }
     },
